:godmode: Svelte|TypeScript|SCSS configured :fire:

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="Ustym Ukhman">
-    <meta name="theme-color" content="#00CC00">
+    <meta name="theme-color" content="#8A0707">
 
-    <meta name="msapplication-TileColor" content="#00CC00">
-    <meta name="keywords" content="Ustym,Ukhman,Ustym Ukhman,Dynamic.css,Dynamic">
+    <meta name="msapplication-TileColor" content="#8A0707">
+    <meta name="keywords" content="Dumb,Zombie,Game,Ustym,Ukhman,Ustym Ukhman">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title>Another Dumb Zombie Game</title>
 
-    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
   </head>
 
   <body>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
   </body>
 </html>
