Implemented WebGL 2 Renderer :fire:

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,11 @@
 
     <title>Another Dumb Zombie Game</title>
 
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <!-- <link rel="manifest" href="./manifest.json" /> -->
   </head>
 
   <body>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
