:feelsgood: Ultimate project structure update :boom:

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-capable" content="no">
 
     <meta name="keywords" content="Dumb,Zombie,Game,Ustym,Ukhman,Ustym Ukhman">
-    <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title>Another Dumb Zombie Game</title>
@@ -22,37 +22,37 @@
     <meta data-vmid="ogurl" property="og:url" content="/">
     <meta data-vmid="ogtype" property="og:type" content="website">
     <meta data-vmid="twittertitle" name="twitter:title" content="Ustym Ukhman">
-    <meta data-vmid="ogimage" property="og:image" content="./assets/img/share.jpg">
+    <meta data-vmid="ogimage" property="og:image" content="assets/img/share.jpg">
 
     <meta data-vmid="twittercard" name="twitter:card" content="summary_large_image">
-    <meta data-vmid="twitterimage" name="twitter:image" content="./assets/img/share.jpg">
+    <meta data-vmid="twitterimage" name="twitter:image" content="assets/img/share.jpg">
     <meta data-vmid="ogtitle" property="og:title" itemprop="name" content="Ustym Ukhman">
 
     <meta data-vmid="description" name="description" content="Another Dumb Zombie Game">
     <meta data-vmid="ogdescription" property="og:description" content="Another Dumb Zombie Game">
     <meta data-vmid="twitterdescription" name="twitter:description" content="Another Dumb Zombie Game">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png" />
 
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png" />
 
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png" />
 
-    <link rel="stylesheet" type="text/css" href="./index.css" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="manifest" href="manifest.json" />
   </head>
 
   <body>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
