Webpack chunks realocated in folders :boom:

--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,11 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png" />
 
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
     <link rel="manifest" href="manifest.json" />
   </head>
 
   <body>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
