--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" amp>
   <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <meta name="fragment" content="!" />
     <meta property="og:url" content="/" />
 
+    <meta http-equiv="cleartype" content="on" />
     <meta name="author" content="Ustym Ukhman" />
     <meta name="theme-color" content="#8A0707" />
-    <meta property="og:type" content="website" />
+    <meta name="MobileOptimized" content="320" />
 
-    <meta name="mobile-web-app-capable" content="no" />
+    <meta property="og:type" content="website" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title itemprop="name">Another Dumb Zombie Game</title>
 
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="msapplication-TileColor" content="#8A0707" />
-    <meta name="apple-mobile-web-app-capable" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="assets/img/share.jpg" />
@@ -29,13 +33,16 @@
     <meta property="og:description" content="Another Dumb Zombie Game" />
     <meta name="twitter:description" content="Another Dumb Zombie Game" />
 
-    <meta name="keywords" content="Dumb,Zombie,Game,Ustym,Ukhman,Ustym Ukhman" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#8A0707" />
+    <meta name="keywords" content="FPS,TPS,Game,Zombies,Survival,Shooter" />
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-title" content="Another Dumb Zombie Game" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 
     <link rel="icon" type="image/png" sizes="16x16"   href="favicon/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32"   href="favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96"   href="favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon/favicon-512x512.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png" />
 
     <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="favicon/apple-icon-57x57.png" />
@@ -49,8 +56,8 @@
     <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="favicon/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="favicon/apple-icon-180x180.png" />
 
-    <link rel="preload" as="style" type="text/css" href="assets/fonts/DrawingBlood.ttf" onload="this.rel = 'stylesheet'" crossorigin="anonymous" />
-    <link rel="preload" as="style" type="text/css" href="assets/fonts/FaceYourFears.ttf" onload="this.rel = 'stylesheet'" crossorigin="anonymous" />
+    <link rel="preload" as="style" type="text/css" href="assets/fonts/FaceYourFears.ttf" onload="this.rel = 'stylesheet'" />
+    <link rel="preload" as="style" type="text/css" href="assets/fonts/DrawingBlood.ttf" onload="this.rel = 'stylesheet'" />
 
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
     <link rel="manifest" href="manifest.json" />
