--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,7 @@
     <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="favicon/apple-icon-152x152.png" />
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="favicon/apple-icon-180x180.png" />
 
-    <link rel="preload" as="style" type="text/css" href="assets/fonts/FaceYourFears.ttf" onload="this.rel = 'stylesheet'" />
-    <link rel="preload" as="style" type="text/css" href="assets/fonts/DrawingBlood.ttf" onload="this.rel = 'stylesheet'" />
-
+    <link rel="preload" as="style" type="text/css" href="styles/fonts.css" onload="this.rel = 'stylesheet'" />
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
     <link rel="manifest" href="manifest.json" />
   </head>
