--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us" amp>
   <head>
-    <base href="/" />
+    <base href="./" />
     <meta charset="utf-8" />
     <meta name="fragment" content="!" />
     <meta property="og:url" content="/" />
