Update repository name
Rename workspace
Update web build
Add YAZH.mp3
Update README.md
Fix String.ts tests

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title itemprop="name">Another Dumb Zombie Game</title>
+    <title itemprop="name">Yet Another Zombie Horror</title>
 
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="msapplication-TileColor" content="#8A0707" />
@@ -26,17 +26,17 @@
     <meta property="og:image" content="assets/img/share.jpg" />
     <meta name="twitter:image" content="assets/img/share.jpg" />
 
-    <meta property="og:title" content="Another Dumb Zombie Game" />
-    <meta name="twitter:title" content="Another Dumb Zombie Game" />
+    <meta property="og:title" content="Yet Another Zombie Horror" />
+    <meta name="twitter:title" content="Yet Another Zombie Horror" />
 
-    <meta name="description" content="Another Dumb Zombie Game" />
-    <meta property="og:description" content="Another Dumb Zombie Game" />
-    <meta name="twitter:description" content="Another Dumb Zombie Game" />
+    <meta name="description" content="Yet Another Zombie Horror" />
+    <meta property="og:description" content="Yet Another Zombie Horror" />
+    <meta name="twitter:description" content="Yet Another Zombie Horror" />
 
     <meta name="apple-mobile-web-app-status-bar-style" content="#8A0707" />
     <meta name="keywords" content="FPS,TPS,Game,Zombies,Survival,Shooter" />
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
-    <meta name="apple-mobile-web-app-title" content="Another Dumb Zombie Game" />
+    <meta name="apple-mobile-web-app-title" content="Yet Another Zombie Horror" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 
     <link rel="icon" type="image/png" sizes="16x16"   href="favicon/favicon-16x16.png" />
