Fix base path in electron app
Update disabled JS screen
Update unsupported browser screen
Fix custom fonts for IE11 rendering
Update electron app configs
Remove CloseButton component

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us" class="no-js" amp>
   <head>
-    <base href="/" />
+    <base href="./" />
 
     <!-- Meta Tags: -->
     <meta charset="utf-8" />
@@ -63,7 +63,7 @@
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/favicon/apple-icon-180x180.png" />
 
     <!-- Fonts: -->
-    <link rel="preload" as="style" type="text/css" href="/styles/fonts.css" onload="this.rel = 'stylesheet'" />
+    <link rel="stylesheet" type="text/css" href="/styles/fonts.css" />
 
     <!-- Disabled JavaScript and unsupported browser styling: -->
     <link rel="stylesheet" type="text/css" href="/styles/index.css" />
