Fix Enemy Death animation when crawling

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <!-- Facebook: -->
     <meta property="og:url" content="/" />
     <meta property="og:type" content="game" />
-    <meta property="og:image" content="/assets/images/share.jpg" />
+    <meta property="og:image" content="./assets/images/share.jpg" />
     <meta property="og:title" content="Yet Another Zombie Horror" />
     <meta property="og:description" content="Yet Another Zombie Horror" />
 
     <!-- Twitter: -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/assets/images/share.jpg" />
+    <meta name="twitter:image" content="./assets/images/share.jpg" />
     <meta name="twitter:title" content="Yet Another Zombie Horror" />
     <meta name="twitter:description" content="Yet Another Zombie Horror" />
 
