--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     <!-- Generic: -->
     <meta name="description" content="Yet Another Zombie Horror" />
+    <meta name="keywords" content="fps,tps,game,horror,zombies,shooter,survival" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
-    <meta name="keywords" content="fps,tps,game,horror,zombies,shooter,survival,first person,third person" />
 
     <!-- Favicons: -->
-    <link rel="icon"      type="image/png" sizes="16x16"   href="./favicons/favicon-16x16.png" />
-    <link rel="icon"      type="image/png" sizes="32x32"   href="./favicons/favicon-32x32.png" />
-    <link rel="icon"      type="image/png" sizes="96x96"   href="./favicons/favicon-96x96.png" />
+    <link rel="icon"      type="image/png" sizes="16x16"   href="./favicons/favicon-16x16.png"   />
+    <link rel="icon"      type="image/png" sizes="32x32"   href="./favicons/favicon-32x32.png"   />
+    <link rel="icon"      type="image/png" sizes="96x96"   href="./favicons/favicon-96x96.png"   />
     <link rel="icon"      type="image/png" sizes="192x192" href="./favicons/favicon-192x192.png" />
     <link rel="icon"      type="image/png" sizes="512x512" href="./favicons/favicon-512x512.png" />
     <link rel="mask-icon" color="#8A0707"  sizes="512x512" href="./favicons/favicon-512x512.png" />
